k8s-cluster/setup/cluster-setup/ingress/load-balancer-svc.yaml
# Meant for use with microk8s metallb: microk8s enable metallb
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
