k8s-cluster/setup/cluster-setup/ingress/test-pod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-pods-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "test-pods/tls-ca-certificate"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: ${TEST_PODS_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: not-found-service
            port:
              number: 80
